fix(service): 1:1 채팅 목록 가져오기 수정 DP-260