@@ -1,14 +1,19 @@
 package goorm.ddok.chat.service;
 
+import goorm.ddok.chat.domain.ChatMessage;
 import goorm.ddok.chat.domain.ChatRoom;
 import goorm.ddok.chat.domain.ChatRoomMember;
 import goorm.ddok.chat.domain.ChatRoomType;
+import goorm.ddok.chat.dto.request.ChatMessageRequest;
 import goorm.ddok.chat.dto.response.*;
+import goorm.ddok.chat.repository.ChatMessageRepository;
 import goorm.ddok.chat.repository.ChatRepository;
 import goorm.ddok.chat.repository.ChatRoomMemberRepository;
 import goorm.ddok.chat.util.ChatMapper;
+import goorm.ddok.chat.util.PaginationUtil;
 import goorm.ddok.global.exception.ErrorCode;
 import goorm.ddok.global.exception.GlobalException;
+import goorm.ddok.member.domain.User;
 import goorm.ddok.member.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -17,7 +22,10 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,12 +33,11 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 @Slf4j
 public class ChatService {
-
     private final ChatRepository chatRepository;
     private final ChatRoomMemberRepository chatRoomMemberRepository;
+    private final ChatMessageRepository chatMessageRepository;
     private final UserRepository userRepository;
     private final ChatMapper chatMapper;
-
 
     // 1:1 채팅 목록 조회
     public ChatListResponseResponse getPrivateChats(String email, Pageable pageable) {
@@ -38,18 +45,44 @@ public class ChatService {
                 .orElseThrow(() -> new GlobalException(ErrorCode.USER_NOT_FOUND))
                 .getId();
 
-        Page<ChatRoom> chatRoomPage = chatRepository.findPrivateChatsByUserId(userId, pageable);
+        // 사용자가 속한 채팅방 조회 조회
+        List<ChatRoomMember> userRooms = chatRoomMemberRepository.findAllByUserIdAndDeletedAtIsNull(userId);
 
-        List<ChatRoomResponse> chatRoomDtos = chatRoomPage.getContent().stream()
-                .map(chatRoom -> chatMapper.toChatRoomDto(chatRoom, userId))
-                .collect(Collectors.toList());
+        // roomId만 추출
+        List<Long> roomIds = userRooms.stream()
+                .map(ChatRoomMember::getRoomId)
+                .distinct() // 중복 제거 (필요시)
+                .toList();
 
-        PaginationResponse pagination = PaginationResponse.builder()
-                .currentPage(chatRoomPage.getNumber())
-                .pageSize(chatRoomPage.getSize())
-                .totalPages(chatRoomPage.getTotalPages())
-                .totalItems(chatRoomPage.getTotalElements())
-                .build();
+        // 1:1 채팅방만 추출
+        List<ChatRoom> chatRooms = chatRepository.findByIdInAndRoomType(roomIds, ChatRoomType.PRIVATE);
+
+        // 최근 대화 순서
+        List<ChatMessage> recentMessages = chatMessageRepository.findAllByRoomIdInAndDeletedAtIsNullOrderByCreatedAtDesc(roomIds);
+
+        // 각 채팅방마다 가장 최근 메시지를 Map에 저장
+        Map<Long, ChatMessage> lastMessageMap = recentMessages.stream()
+                .collect(Collectors.toMap(
+                        ChatMessage::getRoomId,
+                        Function.identity(),
+                        (m1, m2) -> m1.getCreatedAt().isAfter(m2.getCreatedAt()) ? m1 : m2 // 최신 메시지 유지
+                ));
+
+        // 정렬
+        chatRooms.sort(Comparator
+                .comparing((ChatRoom room) -> {
+                    ChatMessage lastMessage = lastMessageMap.get(room.getId());
+                    return lastMessage != null ? lastMessage.getCreatedAt() : room.getCreatedAt();
+                }, Comparator.reverseOrder()) // 최신순
+                .thenComparing(ChatRoom::getCreatedAt, Comparator.reverseOrder()) // 생성일 순
+        );
+
+        // 페이징 처리
+        Page<ChatRoom> chatRoomPage = PaginationUtil.paginate(chatRooms, pageable);
+
+        // DTO 변환
+        List<ChatRoomResponse> chatRoomDtos = chatMapper.toChatRoomDtoList(chatRoomPage.getContent(), userId);
+        PaginationResponse pagination = PaginationUtil.from(chatRoomPage);
 
         return ChatListResponseResponse.builder()
                 .chats(chatRoomDtos)
@@ -82,7 +115,7 @@ public class ChatService {
                 .build();
     }
 
-    // 채팅 검색 - 채팅방 이름, 팀원 닉네임으로 검색
+    // 채팅 검색 - 채팅방 이름으로 검색 (닉네임 검색은 별도 구현 필요)
     public ChatListResponseResponse searchPrivateChats(String email, String search, Pageable pageable) {
 
         Long userId = userRepository.findByEmail(email).orElseThrow(() ->
@@ -132,25 +165,107 @@ public class ChatService {
     }
 
     public ChatMembersResponse getRoomMembers(Long roomID, String email) {
-
         Long userId = userRepository.findByEmail(email).orElseThrow(() ->
                 new GlobalException(ErrorCode.USER_NOT_FOUND)).getId();
 
-        List<ChatRoomMember> roomMemberList = chatRoomMemberRepository.findAllByRoomIdWithUser(roomID);
+        // 채팅방 멤버 조회 (User 정보 포함)
+        List<Object[]> roomMemberWithUserList = chatRoomMemberRepository.findAllByRoomIdWithUserInfo(roomID);
 
-        List<ChatMembersResponse.Member> members = roomMemberList.stream()
-                .map(roomMember -> ChatMembersResponse.Member.builder()
-                        .userId(roomMember.getUserId().getId())
-                        .nickname(roomMember.getUserId().getNickname())
-                        .profileImage(roomMember.getUserId().getProfileImageUrl())
-                        .role(String.valueOf(roomMember.getRole()))
-                        .joinedAt(roomMember.getCreatedAt())
-                        .build())
+        List<ChatMembersResponse.Member> members = roomMemberWithUserList.stream()
+                .map(result -> {
+                    ChatRoomMember roomMember = (ChatRoomMember) result[0];
+                    User user = (User) result[1];
+
+                    return ChatMembersResponse.Member.builder()
+                            .userId(roomMember.getUserId()) // 실제 사용자 ID
+                            .nickname(user.getNickname())
+                            .profileImage(user.getProfileImageUrl())
+                            .role(String.valueOf(roomMember.getRole()))
+                            .joinedAt(roomMember.getCreatedAt())
+                            .build();
+                })
                 .collect(Collectors.toList());
 
         return ChatMembersResponse.builder()
                 .members(members)
                 .totalCount(members.size())
+                .build();
+    }
+
+    // 대안: 더 효율적인 방법 (별도 메서드로 분리)
+    public ChatMembersResponse getRoomMembersOptimized(Long roomID, String email) {
+        Long userId = userRepository.findByEmail(email).orElseThrow(() ->
+                new GlobalException(ErrorCode.USER_NOT_FOUND)).getId();
+
+        // 1. 채팅방 멤버의 gId 목록 조회
+        List<Long> memberIds = chatRoomMemberRepository.findUserIdsByRoomId(roomID);
+
+        // 2. 해당 사용자들의 정보 조회
+        List<User> users = userRepository.findAllById(memberIds);
+        Map<Long, User> userMap = users.stream()
+                .collect(Collectors.toMap(User::getId, user -> user));
+
+        // 3. 멤버 정보 조회
+        List<ChatRoomMember> roomMembers = chatRoomMemberRepository.findAllByRoomIdAndDeletedAtIsNull(roomID);
+
+        List<ChatMembersResponse.Member> members = roomMembers.stream()
+                .map(roomMember -> {
+                    User user = userMap.get(roomMember.getUserId());
+                    return ChatMembersResponse.Member.builder()
+                            .userId(roomMember.getUserId())
+                            .nickname(user != null ? user.getNickname() : "Unknown User")
+                            .profileImage(user != null ? user.getProfileImageUrl() : null)
+                            .role(String.valueOf(roomMember.getRole()))
+                            .joinedAt(roomMember.getCreatedAt())
+                            .build();
+                })
+                .collect(Collectors.toList());
+
+        return ChatMembersResponse.builder()
+                .members(members)
+                .totalCount(members.size())
+                .build();
+    }
+
+    // 메세지 전송
+    @Transactional
+    public ChatMessageResponse sendMessage(String email, Long roomId, ChatMessageRequest request) {
+        User sender = userRepository.findByEmail(email).orElseThrow(() ->
+                new GlobalException(ErrorCode.USER_NOT_FOUND));
+
+        ChatRoom chatRoom = chatRepository.findById(roomId)
+                .orElseThrow(() -> new IllegalArgumentException("채팅방을 찾을 수 없습니다."));
+
+        // 사용자가 해당 채팅방의 멤버인지 확인
+        boolean isMember = chatRoomMemberRepository.existsByRoomIdAndUserId(roomId, sender.getId());
+        if (!isMember) {
+            throw new IllegalArgumentException("채팅방에 참여하지 않은 사용자입니다.");
+        }
+
+        ChatMessage chatMessage = ChatMessage.builder()
+                .roomId(roomId)
+                .senderId(sender.getId())
+                .contentType(request.getContentType())
+                .contentText(request.getContentText())
+                .fileUrl(request.getFileUrl())
+                .replyToId(request.getReplyToId())
+                .build();
+
+        ChatMessage savedMessage = chatMessageRepository.save(chatMessage);
+
+        // 채팅방의 마지막 메시지 시간 업데이트
+        chatRoom.setLastMessageAt(savedMessage.getCreatedAt());
+        chatRepository.save(chatRoom);
+
+        return ChatMessageResponse.builder()
+                .messageId(savedMessage.getId())
+                .roomId(savedMessage.getRoomId())
+                .senderId(savedMessage.getSenderId())
+                .senderNickname(sender.getNickname())
+                .contentType(savedMessage.getContentType())
+                .contentText(savedMessage.getContentText())
+                .fileUrl(savedMessage.getFileUrl())
+                .createdAt(savedMessage.getCreatedAt())
                 .build();
     }
 }
